--- a/index.html
+++ b/index.html
@@ -1,10 +1,114 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Hello GitHub Pages</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Privacy Policy</title>
+  <style>
+    :root{
+      --bg:#f7f8fb;
+      --card:#ffffff;
+      --text:#111827;
+      --muted:#6b7280;
+      --accent:#0f172a;
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    }
+    body{
+      margin:0;
+      background:var(--bg);
+      color:var(--text);
+      line-height:1.6;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding:32px;
+    }
+    .container{
+      max-width:900px;
+      margin:0 auto;
+      background:var(--card);
+      border-radius:12px;
+      box-shadow:0 6px 20px rgba(15,23,42,0.06);
+      padding:32px;
+    }
+    h1{margin-top:0;font-size:1.6rem;}
+    h2{font-size:1.05rem;margin-bottom:8px;}
+    p{margin:12px 0;color:var(--muted);}
+    ul{margin:8px 0 16px 20px;color:var(--muted);}
+    .meta{font-size:0.9rem;color:var(--muted);}
+    footer{margin-top:24px;font-size:0.9rem;color:var(--muted);}
+    code{background:#eef2ff;padding:2px 6px;border-radius:4px;font-family:monospace;}
+  </style>
 </head>
 <body>
-  <h1>Привет! Сайт работает 🚀</h1>
+  <main class="container" role="main">
+    <header>
+      <h1>Privacy Policy</h1>
+      <div class="meta"><strong>Last updated:</strong>26.09.2025</div>
+    </header>
+
+    <section>
+      <p>This Privacy Policy explains how our application ("we", "our", or "us") collects, uses, and protects your information. By using the app, you agree to the terms described below.</p>
+    </section>
+
+    <section>
+      <h2>Information We Collect</h2>
+      <p>When you use the app, we may collect the following types of information:</p>
+      <ul>
+        <li><strong>Usage Data:</strong> interactions within the app, such as screens viewed, buttons clicked, and other actions.</li>
+        <li><strong>Device Information:</strong> device type, operating system, and app version.</li>
+        <li><strong>Analytics Data:</strong> collected through third-party services such as Amplitude and Firebase.</li>
+      </ul>
+      <p>We do <strong>not</strong> collect personally identifiable information such as your name, email address, or phone number unless you explicitly provide it.</p>
+    </section>
+
+    <section>
+      <h2>How We Use Information</h2>
+      <ul>
+        <li>To understand how the app is used.</li>
+        <li>To improve app performance and user experience.</li>
+        <li>To fix bugs and enhance features.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Third-Party Services</h2>
+      <p>Our app uses analytics services to help us understand app usage and improve the product:</p>
+      <ul>
+        <li><strong>Amplitude</strong> – used to track user behavior and app usage.</li>
+        <li><strong>Firebase Analytics</strong> – used to measure and analyze app performance.</li>
+      </ul>
+      <p>These services may collect information as described in their own privacy policies.</p>
+    </section>
+
+    <section>
+      <h2>Data Sharing</h2>
+      <p>We do not sell or share your personal data with third parties. Collected information is used only for analytics and app improvements.</p>
+    </section>
+
+    <section>
+      <h2>Data Security</h2>
+      <p>We take reasonable measures to protect your data. However, no method of transmission over the internet or electronic storage is completely secure.</p>
+    </section>
+
+    <section>
+      <h2>Your Choices</h2>
+      <p>You can disable analytics by adjusting your device settings (for example, limit ad tracking or reset your advertising ID), or by using any opt-out mechanisms the analytics providers offer.</p>
+    </section>
+
+    <section>
+      <h2>Changes to This Policy</h2>
+      <p>We may update this Privacy Policy from time to time. Changes will be reflected in this document with the updated date at the top.</p>
+    </section>
+
+    <section>
+      <h2>Contact Us</h2>
+      <p>If you have any questions about this Privacy Policy, you can contact us at: <br />
+      <strong>u5150164490@gmail.com</strong></p>
+    </section>
+
+    <footer>
+      <p>Thank you for using our app.</p>
+    </footer>
+  </main>
 </body>
 </html>
